public/style/style.css
@import url('https://fonts.googleapis.com/css?family=Oswald');

html, body {
  height: 100%;
  width: 100%;
  margin: 0;
  padding: 0;
  color: black;
  background-image: url('../img/core/background.jpg');
  font-family: 'Oswald', sans-serif;
}

div.header {
	width: 100%; 
	background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(20, 12, 8, .65));
}

#logo{
	padding-left: 20px;
	width: 25%;
	min-width: 262px;
	height: auto;
}

@media only screen and (max-width: 600px) {
		div.header {
		width: 262px; 
		margin-left: auto; 
		margin-right: auto;
		background: linear-gradient(to bottom, rgba(0, 0, 0, 1),rgba(20, 12, 8, .65));
	}
		#logo{
		width: 25%;
		min-width: 262px;
		height: auto;
	}
}

div.menucontainer{
	width: 100%;
	min-width: 337.5px; 
	height: 40px; 
	margin-bottom: 10px; 
	background-color: white; 
	margin-left: auto; 
	margin-right: auto;
}

#menuwrapper {
	display: flex;
  	justify-content: center;
  	align-items: center;
  	width: 90%
  	min-width: 337.5px; 
  	text-algin: center;
  	margin-top: 3px;
  }

div.link {
	float: left;
	width: 150px;
	text-align: center;
}

div.menulinks{

}

div.poscontainer {
	width: 90%; 
	margin-bottom: 10px; 
	margin:auto;
}

div.itemcontainer {
	width: 50%;
}

div.numberpadcontainer {
	width: 100%;
	height: 530px;
	min-width: 337.5px;
	margin-bottom: 25px;
	margin-top: 25px;
}

div.numdisplaywrap { 
	width: 337.5px;
	height: 57px;
	margin-bottom: 10px;
	display: flex;
  	justify-content: center;
  	align-items: center;

}

#boxdesign{
	border-color: #404040; 
	border-width: 3px; 
	border-style: solid;
	background-color: #cfb887;
	border-radius: 4px;
}

#numberpaddisplay {
	width: 98%;
	text-align: center;
    padding: 5px 5px;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 4px;
    box-sizing: border-box;
    font-size: 140%;
	font-family: 'Oswald', sans-serif;
}

#del {
	color: #cc0000;
	font-size: 150%;
}

#enter {
	color: #009933;
	font-size: 150%;
}

#del:hover, #enter:hover {
	color:grey;
}

div.numberpad {
	padding: 10px;
    width: 254px;
    float: left;
    font-family: 'Oswald', sans-serif;
	font-size: 150%;
}

div.buttoncontainer {
    line-height: 75px;
	text-align: center;
	vertical-align: middle;
	margin: 2px;
	width: 75px;
	height: 75px;
	float: left;
	border-width: 1px; 
	border-radius: 40px;
	border-style: solid;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	cursor:default; 
	color: #404040;
}

div.toolbuttoncontainer:hover, div.buttoncontainer:hover {
	box-shadow: 0 4px 8px 0 rgba(54, 81, 94, 0.2), 0 6px 20px 0 rgba(54, 81, 94, 0.19);
	color: grey;
}

.active, div.toolbuttoncontainer:active, div.buttoncontainer:active {
	background-color: #77653f;
	border-color: #000000;
	box-shadow: none;
}

div.nprow {
	width: 100%;
	height: 80px;
	margin: 5px;
}
div.buttons{
	margin: auto;
    width: 35px;
    text-align: center;
}

div.toolbox {
	width: 46.5px;
	margin-left: 5px;
	float: left;
}

div.toolbuttoncontainer {
	width: 40.5px;
	height: 40.5px;
	margin-left: auto;
	margin-right: auto;
	margin-bottom: 10px;
	text-align: center;
	vertical-align: middle;
	line-height: 40.5px;
	border-color: #404040; 
	border-width: 1px; 
	border-style: solid;
	border-radius: 40px;
	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
	cursor: default; 
}

div.tblabel{
	width: 100%;
	text-align: center;
	margin-bottom: 10px;
}



div.footer{
	text-align: center;
	margin-left: 45px;
	margin-bottom: 10px;
}

div.dynamicreceipt {
	width:50%;
	height: 500px;
}

@media only screen and (max-width: 768px) {
	div.dynamicreceipt {
		width: 100%;
		height: 500px;
	}

	div.invdisplay {
		width: 60%;
	}
}

